tests/baselines/reference/Protected2.errors.txt
Protected2.ts(1,1): error TS1044: 'protected' modifier cannot appear on a module or namespace element.
Protected2.ts(1,11): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== Protected2.ts (2 errors) ====
    protected module M {
    ~~~~~~~~~
!!! error TS1044: 'protected' modifier cannot appear on a module or namespace element.
              ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    }